# ROso

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE.md  LICENSE  NAVIGATION.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  environment_issue.yml  feature_request.yml  licence_request.yml  question.yml
.github/workflows/: release.yml  stale.yml  validate.yml
000SUPPL/: Exercitii_Examene_Partea1.md  Exercitii_Examene_Partea2.md  Exercitii_Examene_Partea3.md  REFERINTE.md  generate_diagrams.py
000SUPPL/diagrame_common/: skin.puml
001initialSTEPs/: GHID_VirtualBox_Ubuntu2404_INCEPATORI_SO_ASE.md  GHID_VirtualBox_Ubuntu2404_INTERACTIV.html  GHID_WSL2_Ubuntu2404_INCEPATORI_SO_ASE.md
002initialSTEPs/: GHID_STUDENT_RO.html  GHID_STUDENT_RO.md  README_RO.md  record_homework_tui_RO.py
003initialSTEPs/: 00_Cum_se_utilizeaza_kitul.md  01_Ghid_Scripting_Bash.md  02_Ghid_Scripting_Python_pentru_SO.md  04_Idei_de_proiecte.md  05_Ghid_PlantUML.md
00_SUPPLEMENTARY/: Exam_Exercises_Part1.md  Exam_Exercises_Part2.md  Exam_Exercises_Part3.md  QUICK_REFERENCE_CARD.md  README.md  generate_diagrams.py  validate.sh
00_SUPPLEMENTARY/diagrams_common/: skin.puml
01_INIT_SETUP/: GHID_VirtualBox_Ubuntu2404_INTERACTIV.html  GHID_VirtualBox_Ubuntu2404_RO.md  GHID_WSL2_Ubuntu2404_INTERACTIV.html  GHID_WSL2_Ubuntu2404_RO.md  QUICK_START_RO.md  README.md  verify_installation.sh
01_INIT_SETUP/images/: SCREENSHOTS_NEEDED.md
01_SETUP/: GHID_VirtualBox_Ubuntu2404_INCEPATORI_SO_ASE.md  GHID_WSL2_Ubuntu2404_INCEPATORI_SO_ASE.md  GHID_WSL2_Ubuntu2404_INTERACTIV.html
02_INIT_HOMEWORKS/: CHANGELOG.md  FAQ.md  GHID_STUDENT_RO.html  GHID_STUDENT_RO.md  record_homework_RO.sh  record_homework_tui_RO.py
02_INIT_TEME/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GHID_STUDENT_RO.md  README_RO.md  record_homework_RO.sh
03_GHIDURI/: 00_Cum_se_utilizeaza_kitul.md  01_Ghid_Scripting_Bash.md  02_Ghid_Scripting_Python_pentru_SO.md  03_Ghid_Observabilitate_si_Debugging.md  04_Idei_de_proiecte.md  05_Ghid_PlantUML.md
03_GUIDES/: CHANGELOG_RO.md  CONTRIBUTING_RO.md  FAQ_RO.md  README_RO.md  STUDENT_GUIDE_RO.html  STUDENT_GUIDE_RO.md  check_my_submission.sh  record_homework_RO.sh  record_homework_tui_RO.py
03_GUIDES/examples/: sample_submission_demo.cast
04_PROIECTE/: EVALUARE_GENERALA.md  KUBERNETES_INTRO.md  Makefile  README.md
04_PROIECTE/SPEC_EVALUARE_AUTOMATA/: SPEC_EVALUARE_AUTOMATA.md  SPEC_TESTE_EASY.md  SPEC_TESTE_MEDIUM.md
04_PROIECTE/a)MEDIUM/: M01_Incremental_Backup_System.md  M02_Process_Lifecycle_Monitor.md  M03_Service_Health_Watchdog.md  M04_Network_Security_Scanner.md  M05_Deployment_Pipeline.md  M06_Resource_Usage_Historian.md  M07_Security_Audit_Framework.md  M08_Disk_Storage_Manager.md  M09_Scheduled_Tasks_Manager.md  M10_Process_Tree_Analyzer.md  M11_Memory_Forensics_Tool.md  M12_File_Integrity_Monitor.md  M13_Log_Aggregator.md  M14_Environment_Config_Manager.md  M15_Parallel_Execution_Engine.md
04_PROIECTE/b)EASY/: E01_File_System_Auditor.md  E04_System_Health_Reporter.md  E05_Config_File_Manager.md
04_PROIECTE/c)ADVANCED/: A01_Mini_Job_Scheduler.md  A02_Interactive_Shell_Extension.md  A03_Distributed_File_Sync.md
04_PROIECTE/formative/: project_readiness_quiz.yaml
04_PROIECTE/helpers/: project_validator.sh  submission_packager.sh
04_PROIECTE/templates/: Makefile_template  project_structure.sh
04_PROJECTS/: GENERAL_EVALUATION.md  KUBERNETES_INTRO.md  Makefile  PROJECT_SELECTION_GUIDE.md  README.md  TECHNICAL_GUIDE.md  UNIVERSAL_RUBRIC.md
04_PROJECTS/AUTOMATED_EVALUATION_SPEC/: AUTOMATED_EVALUATION_SPEC.md  AUTOMATED_EVALUATION_SUMMARY.md  TEST_SPEC_ADVANCED.md  TEST_SPEC_EASY.md
04_PROJECTS/a)MEDIUM/: M01_Incremental_Backup_System.md  M02_Process_Lifecycle_Monitor.md  M03_Service_Health_Watchdog.md  (+13 more)
05_CURS/: FORMATIVE_QUIZ_FORMAT.md
SEM-PROJ/: GHID_TEHNIC.md  README.md  RUBRICA_UNIVERSALA.md
SEM01/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM02/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM03/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM04/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM05/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM06/: CHANGELOG.md  Makefile  README.md  requirements.txt
SEM07/: README.md
lib/: README.md  __init__.py  logging_utils.py  randomisation_utils.py  test_logging_utils.py  test_randomisation_utils.py
scripts/: RUNhere.md  add_print_styles.sh  check_links.sh  verify_links.sh
(+1048 files in other folders)
